# xorfile

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/xorcrypt/: __init__.py  _cryptProtocol.py  xor.py
src/xorcrypt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/xorfile/: __init__.py  xorfile.py
src/xorfile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
