[project]
name = "xorcrypt"
version = "0.2"
authors = [
  { name="RTranscriptase", email="mail.me@anidor.org" },
]
description = "Simple encryption software"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typing",
  "argparse"
]

[project.scripts]
xorcrypt = "xorcrypt:main"

[project.urls]
"Homepage" = "http://github.com/tlapka06/xorcrypt"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"