[project]
name = "xorfile"
version = "0.3"
authors = [
  { name="RTranscriptase", email="mail.me@anidor.org" },
]
description = "Simple encryption software"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typing",
  "argparse"
]

[project.scripts]
xorfile = "xorfile:main"

[project.urls]
"Homepage" = "http://github.com/tlapka06/xorfile"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"